[gd_scene load_steps=7 format=3 uid="uid://308gnb3avrh"]

[ext_resource type="Script" path="res://game/weapons/gun_base.gd" id="1_h5rwh"]
[ext_resource type="Resource" uid="uid://cidk78lg4s5c6" path="res://game/projectiles/03_hollowpoint/hollowpoint.tres" id="2_8q4h5"]
[ext_resource type="Texture2D" uid="uid://d30tujdo0am0k" path="res://game/weapons/03_pistol/pistol.png" id="3_t0rj0"]
[ext_resource type="Script" path="res://game/weapons/gun_projectile_spawner.gd" id="4_lgmyi"]
[ext_resource type="AudioStream" uid="uid://fcur87xq24sp" path="res://game/weapons/03_pistol/pistol.wav" id="5_ja0rc"]
[ext_resource type="Texture2D" uid="uid://bpbfpj6dqwxvu" path="res://game/weapons/weapon_crosshairs/R_Crosshair.png" id="6_2i0k7"]

[node name="GunBase" type="Node2D"]
script = ExtResource("1_h5rwh")
projectile_spread = 0.261799
projectile_type = ExtResource("2_8q4h5")
weapon_id = "pistol"
weapon_name = "Pistol"

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_t0rj0")
offset = Vector2(65, 0)

[node name="GunProjectileSpawner" type="Node2D" parent="."]
script = ExtResource("4_lgmyi")

[node name="AttackTimer" type="Timer" parent="GunProjectileSpawner"]
one_shot = true
autostart = true

[node name="AttackSFX" type="AudioStreamPlayer2D" parent="GunProjectileSpawner"]
stream = ExtResource("5_ja0rc")

[node name="BulletSpawnPosition" type="Marker2D" parent="GunProjectileSpawner"]
position = Vector2(78, 0)

[node name="AttackCycleTimer" type="Timer" parent="GunProjectileSpawner"]

[node name="Crosshair" type="Sprite2D" parent="."]
visible = false
top_level = true
texture = ExtResource("6_2i0k7")
